feat: include controller for testing async